5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1671_1101.log
== TEST (2019-04-19 15:23:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("consumo/h:")
t=input("Qual o tipo? R/I/C")
print(c,"kWh e tipo",y)
if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
File "XXXX", line 5
    t=input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:23:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("consumo/h:")
t=input("R/I/C?")
print(c,"kWh e tipo",y)
if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
File "XXXX", line 5
    t=input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:24:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("consumo/h:")
t=float(input("R/I/C?"))
print(c,"kWh e tipo",y)
if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
File "XXXX", line 5
    t=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:25:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("consumo/h:")
t=(input("R/I/C?"))
print(c,"kWh e tipo",y)
if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
File "XXXX", line 5
    t=(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:25:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("consumo/h:")
t=(input("R/I/C?"))
print(c, y)
if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
File "XXXX", line 5
    t=(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:26:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("consumo/h:")
t=input()
print(c,"kWh e tipo",y)
if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
File "XXXX", line 5
    t=input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:26:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("consumo/h:")
t=input()

if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
File "XXXX", line 5
    t=input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 15:28:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("consumo/h:")
t=input("Qual o tipo? R/I/C")
print(c,"kWh e tipo",y)
if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- EXECUTION TIME:
0.143408
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 5
    t=input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:28:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c=float(input("consumo/h:")
t=input("Qual o tipo? R/I/C")
print(c,"kWh e tipo",y)
if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
File "XXXX", line 5
    t=input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:29:03) 
-- CODE:

c=float(input("consumo/h:")
t=input("Qual o tipo? R/I/C")
print(c,"kWh e tipo",y)
if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
File "XXXX", line 3
    t=input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:30:42) 
-- CODE:
c=float(input("consumo/h:")
t=input("Qual o tipo? R/I/C")
print(c,"kWh e","tipo",t)
		  

if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
File "XXXX", line 2
    t=input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:31:12) 
-- CODE:
c=float(input("consumo/h:")
t=input("Qual o tipo? R/I/C")

		  
if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
File "XXXX", line 2
    t=input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:31:40) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print(c,"kWh e tipo",t)
		  

if((c<=500)or(c<=1000)or(c<=5000):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
File "XXXX", line 6
    if((c<=500)or(c<=1000)or(c<=5000):
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:31:53) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print(c,"kWh e tipo",t)
		  

if((c<=500)or(c<=1000)or(c<=5000)):
	if(t=="R"):
		h=(c*0.44)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.55)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.55)
		print(round("Valor total:",h, 2))
else:
	if(t=="R"):
		h=(c*0.65)
		print(round("Valor total:",h, 2))
	elif(t=="I"):
		h=(c*0.60)
		print(round("Valor total:",h, 2))
	else:
		h=(c*0.60)
		print(round("Valor total:",h, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round("Valor total:",h, 2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:34:38) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print(c,"kWh e tipo",t)
		  

if((c<=500)or(c<=1000)or(c<=5000)):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:",h)
-- OUTPUT:
-56.0 kWh e tipo I
Valor total: -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:35:14) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500)or(c<=1000)or(c<=5000)):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 15:35:33) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500)or(c<=1000)or(c<=5000)):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:",h)
-- EXECUTION TIME:
0.126584
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: 420.42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:36:32) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500)or(c<=1000)or(c<=5000)):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 15:36:50) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500)or(c<=1000)or(c<=5000)):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- EXECUTION TIME:
0.192021
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total:R$ 420.42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:36:52) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500)or(c<=1000)or(c<=5000)):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:38:21) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500)or(c<=1000)or(c<=5000)):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:39:52) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500)or(c<=1000)or(c<=5000)):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*(65/100)), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:40:35) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500)or(c<=1000)or(c<=5000)):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=c*0.65
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:42:09) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="I")or(c<=5000 and t=="C")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=c*0.65
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:43:08) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="I")or(c<=5000 and t=="C")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 15:43:29) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="I")or(c<=5000 and t=="C")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- EXECUTION TIME:
0.221465
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total:R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:43:37) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="I")or(c<=5000 and t=="C")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:44:02) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="I")or(c<=5000 and t=="C")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:44:27) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="I")or(c<=5000 and t=="C")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="I"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:45:36) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="I")or(c<=5000 and t=="C")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:46:03) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/I/C")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="I")or(c<=5000 and t=="C")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:46:39) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="I")or(c<=5000 and t=="C")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:46:53) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="I")or(c<=5000 and t=="C")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:47:43) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:47:54) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 15:48:14) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- EXECUTION TIME:
0.212584
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total:R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:48:20) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 15:49:35) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total: R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$ ",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$ ",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$ ",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$ ",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$ ",h)
-- EXECUTION TIME:
0.127729
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total:R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total:R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:49:37) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  

if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total: R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$ ",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$ ",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$ ",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$ ",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total:R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:53:12) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0):
	h="Dados invalidos"
	print(h)
elif((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total: R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$ ",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$ ",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$ ",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$ ",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 15:53:25) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0):
	h="Dados invalidos"
	print(h)
elif((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total: R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$ ",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$ ",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$ ",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$ ",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$ ",h)
-- EXECUTION TIME:
0.175705
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total:R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:53:40) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0):
	h="Dados invalidos"
	print(h)
elif((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total: R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$ ",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$ ",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$ ",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$ ",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:55:33) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total:R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total:R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total:R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total:R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total:R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 15:55:38) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total:R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total:R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total:R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total:R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total:R$ ",h)
-- EXECUTION TIME:
0.124872
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total:R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:57:20) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0):
	h="Dados invalidos"
	print(h)
elif:((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
	if(t=="R"):
		h=round((c*0.44), 2)
		print("Valor total: R$",h)
	elif(t=="C"):
		h=round((c*0.55), 2)
		print("Valor total:R$ ",h)
	else:
		h=round((c*0.55), 2)
		print("Valor total:R$ ",h)
else:
	if(t=="R"):
		h=round((c*0.65), 2)
		print("Valor total:R$ ",h)
	elif(t=="C"):
		h=round((c*0.60), 2)
		print("Valor total:R$ ",h)
	else:
		h=round((c*0.60), 2)
		print("Valor total:R$ ",h)
-- ERROR:
File "XXXX", line 8
    elif:((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 15:58:03) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total:R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total:R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total:R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total:R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total:R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 15:58:24) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total:R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total:R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total:R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total:R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total:R$ ",h)
-- EXECUTION TIME:
0.150546
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total:R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 15:58:29) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total:R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total:R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total:R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total:R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total:R$ ",h)
-- EXECUTION TIME:
0.123017
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total:R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:00:14) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			
		elif(t=="C"):
			h=round((c*0.55), 2)
			
		else:
			h=round((c*0.55), 2)
			
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			
		elif(t=="C"):
			h=round((c*0.60), 2)
			
		else:
			h=round((c*0.60), 2)
print("Valor total: R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
Valor total: R$  Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:00:17) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			
		elif(t=="C"):
			h=round((c*0.55), 2)
			
		else:
			h=round((c*0.55), 2)
			
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			
		elif(t=="C"):
			h=round((c*0.60), 2)
			
		else:
			h=round((c*0.60), 2)
print("Valor total: R$ ",h)
-- EXECUTION TIME:
0.152428
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
Valor total: R$  Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:02:15) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 and ((t!="R")or(t!="C")or(t!="I")):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- ERROR:
File "XXXX", line 5
    if(c<0 and ((t!="R")or(t!="C")or(t!="I")):
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:02:30) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 and(t!="R")or(t!="C")or(t!="I"):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- ERROR:
File "XXXX", line 5
    if(c<0 and(t!="R")or(t!="C")or(t!="I"):
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:03:14) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 and(t!="R" and "C" and "I"):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- ERROR:
File "XXXX", line 5
    if(c<0 and(t!="R" and "C" and "I"):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:03:54) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 or (t!="R" or t!="C" or "I")):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:03:59) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 or (t!="R" or t!="C" or "I")):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- EXECUTION TIME:
0.205115
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:04:02) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 or (t!="R" or t!="C" or "I")):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:04:13) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 or (t!="R" or t!="C" or "I")):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:04:52) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 or (t!="R" or t!="C" or "I")):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:05:40) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 or (t!="R" or t!="C" or "I")):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:06:44) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 or (not(t=="R" or t=="C" or t=="I")):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- ERROR:
File "XXXX", line 5
    if(c<0 or (not(t=="R" or t=="C" or t=="I")):
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:07:08) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 or (not(t=="R" or t=="C" or t=="I"))):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:07:24) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 or (not(t=="R" or t=="C" or t=="I"))):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- EXECUTION TIME:
0.12386
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$  621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:13:30) 
-- CODE:
c=float(input("consumo/h:"))
t=input("Qual o tipo? R/C/I")
print("Entradas:",c,"kWh e tipo",t)
		  
if(c<0 or (not(t=="R" or t=="C" or t=="I"))):
	h="Dados invalidos"
	print(h)
else:
	if((c<=500 and t=="R")or(c<=1000 and t=="C")or(c<=5000 and t=="I")):
		if(t=="R"):
			h=round((c*0.44), 2)
			print("Valor total: R$",h)
		elif(t=="C"):
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.55), 2)
			print("Valor total: R$ ",h)
	else:
		if(t=="R"):
			h=round((c*0.65), 2)
			print("Valor total: R$ ",h)
		elif(t=="C"):
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
		else:
			h=round((c*0.60), 2)
			print("Valor total: R$ ",h)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
